Updated progress bar to accomodate text or html label. Updated styling to fix high contrast look and feel

--- a/src/components/progress-bar/_progress-bar.scss
+++ b/src/components/progress-bar/_progress-bar.scss
@@ -2,22 +2,6 @@
    #PROGRESS BAR
    ========================================================================== */
 
-.hmcts-progress-bar {
-  overflow: hidden;
-  position: relative;
-
-  &::before {
-    background-color: govuk-colour("green");
-    content: "";
-    height: 6px;
-    position: absolute;
-    top: 13px; left: 0;
-    width: 100%;
-  }
-
-}
-
-
 .hmcts-progress-bar__list {
   font-size: .1px; // Hide white space between elements
   list-style: none;
@@ -33,6 +17,15 @@
     width: 100%;
   }
 
+  &::before {
+    border-top: 6px solid govuk-colour("green");
+    content: "";
+    left: 0;
+    position: absolute;
+    top: 13px;
+    width: 100%;
+  }
+
 }
 
 
@@ -44,45 +37,62 @@
   text-align: center;
   vertical-align: top;
 
+  &:first-child,
+  &:last-child {
+    &::before {
+      border-top: 6px solid govuk-colour("white");
+      content: "";
+      position: absolute;
+      top: 13px; left: 0;
+      width: 50%;
+    }
+
+  }
+
+  &:first-child {
+
+    &::before {
+      left: 0;
+    }
+
+  }
+
+  &:last-child {
+
+    &::before {
+      left: auto;
+      right: 0;
+    }
+
+  }
+
   &[aria-current=step] { // https://tink.uk/using-the-aria-current-attribute
-    font-weight: bold;
+    font-weight: 700;
   }
 
 }
 
 
+
 .hmcts-progress-bar__icon {
+  position: relative;
+  background-color: govuk-colour("white");
+  border: 6px solid govuk-colour("green");
+  border-radius: 50%;
+  box-sizing: border-box;
   display: block;
   height: 32px;
-  position: relative;
-  width: 100%;
-
-  &::after {
-    background-color: govuk-colour("white");
-    border-radius: 50%;
-    box-shadow: inset 0 0 0 6px govuk-colour("green");
-    content: "";
-    display: block;
-    height: 32px;
-    left: 50%;
-    margin-left: -16px;
-    position: absolute;
-    width: 32px;
-    z-index: 2;
-  }
-
+  margin-left: auto;
+  margin-right: auto;
+  width: 32px;
 }
 
 
 .hmcts-progress-bar__icon--complete {
-
-  &::after {
-    background-color: govuk-colour("green");
-    background-image: url(#{$hmcts-images-path}icon-progress-tick.svg);
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-  }
-
+  background-color: govuk-colour("green");
+  background-image: url(#{$hmcts-images-path}icon-progress-tick.svg);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 
@@ -93,40 +103,4 @@
   margin-top: 10px;
   position: relative;
   word-wrap: break-word; // Just in case
-  z-index: 2;
-}
-
-
-// First and last child
-.hmcts-progress-bar__list-item:first-child,
-.hmcts-progress-bar__list-item:last-child {
-
-  .hmcts-progress-bar__icon::before {
-    background-color: govuk-colour("white");
-    content: '';
-    height: 32px;
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
-
-}
-
-
-// First child
-.hmcts-progress-bar__list-item:first-child {
-
-  .hmcts-progress-bar__icon::before {
-    right: 50%;
-  }
-
-}
-
-// Last child
-.hmcts-progress-bar__list-item:last-child {
-
-  .hmcts-progress-bar__icon::before {
-    left: 50%;
-  }
-
 }
